--- a/first-project/src/app/cursos/cursos.component.html
+++ b/first-project/src/app/cursos/cursos.component.html
@@ -1,2 +1,6 @@
-<p>cursos components!</p>
+<p>Lista de cursos do portal {{nomePortal}}/p>
 <app-curso-detalhe></app-curso-detalhe>
+<ul>
+    <li *ngFor="let curso of cursos">{{curso}}</li>
+  
+</ul>
