--- a/databinding/src/app/databinding/databinding.component.html
+++ b/databinding/src/app/databinding/databinding.component.html
@@ -1,42 +1,8 @@
-<section class="property-binding">
-    <!--<article>
-         <h3>Interpolação</h3>
-         <p >String renderizada com a interpolação : {{url}}</p>
-         <p> Resultado de 1 + 1 é : {{1 +1}}</p>
-         <p>Resultado de 1 + 1 não é: {{1 + 1 + getValor()}}</p>
-         <p>Curso de Angular e gosto do curso:{{cursoAngular && getCurtirCurso ()}}</p>
-     </article>
-     <article>
-         <h3>Property Binding</h3>
-         <img [src]="urlImage" alt="">
-     </article>-->
-     <h1>Class e Style binding</h1>
-     <div>
-         Selecione uma classe
-         <select #classe (change) ="0"> 
-             <option value="alert-success">Sucesso</option>
-             <option value="alert-info">Info</option>
-             <option value="alert-warning">Alerta</option>
-             <option value="alert-danger">Erro</option>
-         </select>
-         <br>
-         <br>
-         <div class="alert {{classe.value}} role='alert'" >
-             Texto colorido conforme valor do combobox
-         </div>
-         <br>
-         <br>
-         <div class="alert" role="alert"
-         [class.alert-success]="classe.value=='alert-success'">Sucesso</div>
-         <div class="alert" role="alert"
-         [class.alert-info]="classe.value=='alert-info'">Info</div>
-         <div class="alert" role="alert"
-         [class.alert-warning]="classe.value=='alert-warning'">Alerta</div>
-         <div class="alert" role="alert"
-         [class.alert-danger]="classe.value=='alert-danger'">Erro</div>
-         
-         
-         <div class="alert alert-danger" role="alert"
-        [style.display]="classe.value == 'alert-danger' ? 'block':'none'"> Esse texo só aparece em caso de Erro</div>
-     </div>
- </section>
+<article>
+    <h3>Event Binding</h3>
+    <div>
+        <button class="btn btn-primary">
+            Submeter
+        </button>
+    </div>
+</article>
