two-way databinding

--- a/databinding/src/app/databinding/databinding.component.html
+++ b/databinding/src/app/databinding/databinding.component.html
@@ -1,4 +1,4 @@
-<article class="m-3">
+<!--<article class="m-3">
     <h3>Event Binding</h3>
     <div>
         <button (click)="Increment()"
@@ -31,3 +31,7 @@
      
     </div>
 </article>
+-->
+
+
+<app-meu-form></app-meu-form>
