--- a/databinding/src/app/databinding/databinding.component.html
+++ b/databinding/src/app/databinding/databinding.component.html
@@ -34,4 +34,12 @@
 -->
 
 
-<app-meu-form></app-meu-form>
+<!--<app-meu-form></app-meu-form>-->
+
+<section class ="input-output-properties">
+    <article>
+        <h3>Input/Output Properties</h3>
+
+        <app-curso [nome] = "nomeDoCurso"></app-curso>
+    </article>
+</section>
