--- a/databinding/src/app/databinding/databinding.component.html
+++ b/databinding/src/app/databinding/databinding.component.html
@@ -33,13 +33,13 @@
 </article>
 -->
 
-
 <!--<app-meu-form></app-meu-form>-->
 
-<section class ="input-output-properties">
-    <article>
-        <h3>Input/Output Properties</h3>
+<section class="input-output-properties">
+  <article>
+    <h3 class="m-4">Input/Output Properties</h3>
 
-        <app-curso [nome] = "nomeDoCurso"></app-curso>
-    </article>
+    <app-curso [nome]="nomeDoCurso"></app-curso>
+    <contador [valor]="valor" (mudouValor)="onMudouValor($event)"></contador>
+  </article>
 </section>
