--- a/databinding/src/app/app.component.html
+++ b/databinding/src/app/app.component.html
@@ -1,4 +1,5 @@
-<!--<app-databinding></app-databinding>-->
+<app-databinding></app-databinding>
+<!--
 <app-ciclo [valor]="valor" *ngIf="!deletarCiclo" class="mt-10"></app-ciclo>
 <div>
   <button type="button" (click)="mudarValor()" class="btn btn-primary mr-5">
@@ -11,4 +12,4 @@
   <button type="button" (click)="comecarCiclo()" class="btn btn-alert">
     Começar
   </button>
-</div>
+</div>-->
