--- a/databinding/src/app/outputproperty/outputproperty.component.html
+++ b/databinding/src/app/outputproperty/outputproperty.component.html
@@ -1,6 +1,6 @@
 <div>
   <button class="btn btn-primary" type="button" (click)="decrement()">-</button>
 
-  <input type="text" [value]="valor" readonly />
+  <input type="text" [value]="valor" readonly #campoInput />
   <button class="btn btn-primary" type="button" (click)="increment()">+</button>
 </div>
